2003-06-29  Alan Modra  <amodra@bigpond.net.au>

	* chew.c (paramstuff): Don't emit PARAMS.

2003-02-12  Bob Wilson  <bob.wilson@acm.org>

	* bfd.texinfo: Fix quotes for texinfo.  Make section title
	capitalization more consistent.  Use @example instead of @lisp.
	Replace FDL appendix with include of fdl.texi.
	* fdl.texi: New file.

2002-11-18  Klee Dienes  <kdienes@apple.com>

	* Makefile.am (DOCFILES): Add bfdwin.texi, bfdio.texi.
	(PROTOS): Add bfdio.p, bfdwin.p.
	(SRCDOC): Add bfdio.c, bfdwin.c.
	(SRCPROT): Add bfdio.c, bfdwin.c.
	(SRCIPROT): Add bfdio.c, bfdwin.c.
	(LIBBFD_H_DEP): Add bfdio.c, bfdwin.c.
	(BFD_H_DEP): Add bfdio.c, bfdwin.c.
	Add rules for bfdio.texi, bfdwin.text.
	* bfd.texinfo: Include bfdio.texi.

2002-10-14  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.in: Regenerate.

2002-10-11  Daniel Jacobowitz  <drow@mvista.com>

	* Makefile.in: Regenerated.

2002-08-29  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* chew.c (paramstuff, outputdots, perform, bang and usage): Remove
	void from function definitions.

2002-08-13  Alan Modra  <amodra@bigpond.net.au>

	* header.sed: Strip tabs.

2002-06-08  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Fix quote style in last change.
	* Makefile.in: Regenerate.

2002-06-07  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am (libbfd.h): Don't use "echo -n".
	(libcoff.h, bfd.h): Likewise.
	* Makefile.in: Regenerate.

2002-06-06  Lars Brinkhoff  <lars@nocrew.org>

	* bfdint.texi: Change registry@sco.com to registry@caldera.com.

2002-06-05  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am (libbfd.h): Add "Extracted from.." comment.
	(libcoff.h, bfd.h): Likewise.
	* Makefile.in: Regenerate.

2002-05-25  Alan Modra  <amodra@bigpond.net.au>

	* chew.c: Use #include "" instead of <> for local header files.

2002-04-20  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.in: Regenerate.

2002-02-11  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.in: Regenerate.
